src/test/ui/gc/check_finalizers.stderr
error: `ShouldFail(Cell::new(123))` cannot be safely finalized.
  --> $DIR/check_finalizers.rs:74:13
   |
LL |         self.0.replace(456);
   |         -------------------
   |         |
   |         caused by the expression in `fn drop(&mut)` here because
   |         it uses a type which is not safe to use in a finalizer.
...
LL |     Gc::new(ShouldFail(Cell::new(123)));
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^ has a drop method which cannot be safely finalized.
   |
   = help: `Gc` runs finalizers on a separate thread, so drop methods
           must only use values whose types implement `Send + Sync` or `FinalizerSafe`.

error: `boxed_trait` cannot be safely constructed.
  --> $DIR/check_finalizers.rs:77:13
   |
LL |     Gc::new(boxed_trait);
   |     --------^^^^^^^^^^^-
   |     |       |
   |     |       contains a reference (&) which may no longer be valid when it is finalized.
   |     `Gc::new` requires that a type is reference free.

error: `boxed_trait` cannot be safely finalized.
  --> $DIR/check_finalizers.rs:77:13
   |
LL |     Gc::new(boxed_trait);
   |     --------^^^^^^^^^^^-
   |     |       |
   |     |       has a drop method which cannot be safely finalized.
   |     `Gc::new` requires that it implements the `FinalizeSafe` trait.
   |
   = help: `Gc` runs finalizers on a separate thread, so `boxed_trait` must implement `FinalizeSafe` in order to be safely dropped.

error: `gcfields` cannot be safely finalized.
  --> $DIR/check_finalizers.rs:81:13
   |
LL |         println!("Boom {}", self.0);
   |                             ------
   |                             |
   |                             caused by the expression here in `fn drop(&mut)` because
   |                             it uses another `Gc` type.
...
LL |     Gc::new(gcfields);
   |             ^^^^^^^^ has a drop method which cannot be safely finalized.
   |
   = help: `Gc` finalizers are unordered, so this field may have already been dropped. It is not safe to dereference.

error: `self_call` cannot be safely finalized.
  --> $DIR/check_finalizers.rs:84:13
   |
LL |         self.foo();
   |         ----------
   |         |
   |         caused by the expression in `fn drop(&mut)` here because
   |         it uses a type which is not safe to use in a finalizer.
...
LL |     Gc::new(self_call);
   |             ^^^^^^^^^ has a drop method which cannot be safely finalized.
   |
   = help: `Gc` runs finalizers on a separate thread, so drop methods
           must only use values whose types implement `Send + Sync` or `FinalizerSafe`.

error: `transparent_call` cannot be safely finalized.
  --> $DIR/check_finalizers.rs:87:13
   |
LL |         let x = ShouldPassInFuture(456 as *mut u8);
   |                 ----------------------------------
   |                 |
   |                 caused by the expression in `fn drop(&mut)` here because
   |                 it uses a type which is not safe to use in a finalizer.
...
LL |     Gc::new(transparent_call);
   |             ^^^^^^^^^^^^^^^^ has a drop method which cannot be safely finalized.
   |
   = help: `Gc` runs finalizers on a separate thread, so drop methods
           must only use values whose types implement `Send + Sync` or `FinalizerSafe`.

error: aborting due to 6 previous errors

